/*
 * Copyright 2017-present Open Networking Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.onosproject.grpc.net.device.models";

package net.device;

message PortStatisticsProto {
    int32 port = 1;
    int64 packets_received = 2;
    int64 packets_sent = 3;
    int64 bytes_received = 4;
    int64 bytes_sent = 5;
    int64 packets_rx_dropped = 6;
    int64 packets_tx_dropped = 7;
    int64 packets_rx_errors = 8;
    int64 packets_tx_errors = 9;
    int64 duration_sec = 10;
    int64 duration_nano = 11;
    bool is_zero = 12;
    // TODO add all other fields
}
